tests/snapshots/lexer_tests__err_unclosed_char.diag.snap
---
source: tests/lexer_tests.rs
expression: error_msg
---
● E1000: Invalid token
────────────────────────────────────────────────────────────
  → <input>:2:9

     2 │
       │ let x = 'A
       │         ^^^
       │

  ⓘ Encountered an invalid token: ''A
'

  💡 Check for unexpected characters or typos in your code
────────────────────────────────────────────────────────────
