tests/snapshots/lexer_tests__err_unclosed_comment.diag.snap
---
source: tests/lexer_tests.rs
expression: error_msg
---
● E1000: Invalid token
────────────────────────────────────────────────────────────
  → <input>:2:1

     2 │
       │ /*
       │ ^^^
       │

  ⓘ Encountered an invalid token: '/*
 * Este comentario no se cierra
'

  💡 Check for unexpected characters or typos in your code
────────────────────────────────────────────────────────────
