tests/snapshots/lexer_tests__err_unknown_token.diag.snap
---
source: tests/lexer_tests.rs
expression: error_msg
---
[1;31m●[0m [1;31mE1000[0m: [1mInvalid token[0m [90m[Lexer][0m
[90m────────────────────────────────────────────────────────────[0m
  [1;34m→[0m [36m<input>[0m:[1;33m2[0m:[1;33m9[0m

  [90m   2[0m [90m│[0m
  [90m    [0m [90m│[0m let x = @#$%^&*()
  [90m    [0m [90m│[0m         [1;31m^^^[0m
  [90m    [0m [90m│[0m

  [1;34mⓘ[0m Encountered an invalid token: '@'

  [33m💡[0m [97mCheck for unexpected characters or typos in your code[0m

  [34m📚[0m Learn more: [36mhttps://liva-lang.org/docs/errors/lexer#e1000[0m
[90m────────────────────────────────────────────────────────────[0m
