tests/snapshots/lexer_tests__ok_keywords.tokens.snap
---
source: tests/lexer_tests.rs
expression: output
---
Tokens: [
    "Let",
    "Ident(\"x\")",
    "Assign",
    "IntLiteral(10)",
    "Const",
    "Ident(\"PI\")",
    "Assign",
    "FloatLiteral(3.14)",
    "Import",
    "Ident(\"std\")",
    "Dot",
    "Ident(\"io\")",
    "Use",
    "Rust",
    "StringLiteral(\"serde\")",
    "If",
    "Ident(\"condition\")",
    "LBrace",
    "Ident(\"print\")",
    "LParen",
    "StringLiteral(\"true\")",
    "RParen",
    "RBrace",
    "Else",
    "LBrace",
    "Ident(\"print\")",
    "LParen",
    "StringLiteral(\"false\")",
    "RParen",
    "RBrace",
    "While",
    "Ident(\"condition\")",
    "LBrace",
    "Break",
    "RBrace",
    "For",
    "Ident(\"item\")",
    "In",
    "Ident(\"items\")",
    "LBrace",
    "Continue",
    "RBrace",
    "Switch",
    "Ident(\"value\")",
    "LBrace",
    "Case",
    "IntLiteral(1)",
    "Colon",
    "Ident(\"print\")",
    "LParen",
    "StringLiteral(\"one\")",
    "RParen",
    "Case",
    "IntLiteral(2)",
    "Colon",
    "Ident(\"print\")",
    "LParen",
    "StringLiteral(\"two\")",
    "RParen",
    "Default",
    "Colon",
    "Ident(\"print\")",
    "LParen",
    "StringLiteral(\"other\")",
    "RParen",
    "RBrace",
    "Try",
    "LBrace",
    "Ident(\"risky_operation\")",
    "LParen",
    "RParen",
    "RBrace",
    "Catch",
    "Ident(\"error\")",
    "LBrace",
    "Ident(\"handle_error\")",
    "LParen",
    "Ident(\"error\")",
    "RParen",
    "RBrace",
    "Throw",
    "Ident(\"new\")",
    "Ident(\"Error\")",
    "LParen",
    "StringLiteral(\"Something went wrong\")",
    "RParen",
    "Return",
    "Ident(\"result\")",
    "Async",
    "Ident(\"function\")",
    "Ident(\"fetch_data\")",
    "LParen",
    "RParen",
    "LBrace",
    "Return",
    "Await",
    "Ident(\"http\")",
    "Dot",
    "Ident(\"get\")",
    "LParen",
    "StringLiteral(\"url\")",
    "RParen",
    "RBrace",
    "Par",
    "Ident(\"heavy_computation\")",
    "LParen",
    "RParen",
    "Task",
    "Par",
    "Ident(\"background_task\")",
    "LParen",
    "RParen",
]
